<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/map_cs_collect_dialog"
        android:background="@drawable/map_shape_dialog_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="230dp">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/map_tv_cancel_collect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_tv_collect_cancel"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/levelOneFontColor"
        android:layout_marginTop="35dp"
        android:textSize="25sp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/map_tv_cancel_collect_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/map_tv_cancel_collect_hint"
            android:textColor="@color/levelFourFontColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.562"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/map_tv_cancel_collect" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/map_btn_dialog_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="47dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/map_shape_btn_background"
            android:paddingStart="35dp"
            android:paddingTop="2dp"
            android:paddingEnd="35dp"
            android:paddingBottom="2dp"
            android:text="@string/map_btn_confirm"
            android:textColor="@color/whiteFontColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/map_btn_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/map_shape_btn_white_background"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:paddingStart="35dp"
            android:paddingEnd="35dp"
            android:text="@string/map_btn_cancel"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/map_btn_dialog_confirm" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>