<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/whiteBackground">
<ImageView
    android:id="@+id/map_iv_allimage_back"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/common_back"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="15dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/map_tv_allimage_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_tv_allimage_name"
        android:textColor="@color/levelOneFontColor"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/map_iv_allimage_back"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"/>

    <ImageView
        android:id="@+id/map_iv_allimage_share"
        android:layout_width="23dp"
        android:layout_height="21dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="21dp"
        android:src="@drawable/map_ic_share_iamge"
        app:layout_constraintBottom_toTopOf="@id/map_rv_allimage"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintLeft_toRightOf="@id/map_tv_allimage_name"
        app:layout_constraintRight_toLeftOf="@id/map_tv_allimage_share" />
    <TextView
        android:id="@+id/map_tv_allimage_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/map_tv_allimage_share"
        android:textColor="@color/qa_answer_empty_content_color"
        android:textSize="14sp"
        android:layout_marginRight="10dp"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintLeft_toRightOf="@id/map_tv_allimage_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/map_rv_allimage"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/map_tv_allimage_name"
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:id="@+id/map_tv_nomore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/logInToTheGrayFontBelow"
        android:text="@string/map_tv_allimage_nomore"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/map_rv_allimage"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>