<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/map_cl_replace_fragment"
        android:layout_width="match_parent"
        android:layout_height="525dp"
        android:background="@drawable/map_layer_list_fragment_place_content_top"
        android:paddingTop="15dp">

        <com.mredrock.cyxbs.discover.map.view.widget.RedRockTipsView
            android:id="@+id/map_place_detail_content_tip"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tipsColor="@color/courseTableDragIndicatorBlockColor" />


        <LinearLayout
            android:id="@+id/map_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.025"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:maxLines="1"
                android:text="@string/map_place_detail"
                android:gravity="center"
                android:textColor="@color/grades_fragment_text_color_black"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.113"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.062" />
        </LinearLayout>

        <com.mredrock.cyxbs.common.component.RedRockAutoWarpView
            android:id="@+id/map_rrv_place_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="8dp"
            android:paddingEnd="10dp"
            android:paddingBottom="8dp"
            app:horizontalSpacing="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.101"
            app:maxLine="3"
            app:verticalsSpacing="8dp"
            tools:layout_editor_absoluteX="-16dp">

        </com.mredrock.cyxbs.common.component.RedRockAutoWarpView>

        <ImageView
            android:id="@+id/map_iv_place_collect"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="2dp"
            android:gravity="center"
            android:padding="6dp"
            android:src="@drawable/map_ic_my_collect"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.92"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/map_place_detail_content_tip"
            app:layout_constraintVertical_bias="0.01999998" />

        <TextView
            android:id="@+id/map_tv_place_collect"
            android:layout_width="51dp"
            android:layout_height="12dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="我最爱去"
            android:textColor="@color/mine_sign_divider_blue_light"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.905"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/map_place_detail_content_tip"
            app:layout_constraintVertical_bias="0.00999999" />

        <LinearLayout
            android:id="@+id/map_linearlayout2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.187">

            <TextView
                android:layout_width="35dp"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:text="@string/map_detail"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/map_tv_search_more_place_detail"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginStart="240dp"
                android:gravity="center"
                android:text="@string/map_look_more"
                android:textSize="12dp" />

            <ImageView
                android:id="@+id/map_iv_search_more_place_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:background="@drawable/map_ic_forward" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/map_rv_place_detail_image_list"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:padding="10dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.33"
            tools:layout_editor_absoluteX="-16dp" />

        <LinearLayout
            android:id="@+id/map_linearlayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.588"
            tools:layout_editor_absoluteX="0dp">

            <ImageView
                android:id="@+id/map_iv_back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="140dp"
                android:src="@drawable/map_ic_share_image_grey" />

            <TextView
                android:id="@+id/map_tv_share_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:padding="5dp"
                android:text="@string/map_share_people_place_image"
                android:textColor="@color/mine_about_text_color_normal"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/map_ll_divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.656"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:maxLines="1"
                android:padding="5dp"
                android:text="@string/map_tv_about_place_more"
                android:textSize="15dp" />
        </LinearLayout>

        <com.mredrock.cyxbs.common.component.RedRockAutoWarpView
            android:id="@+id/map_rrv_place_detail_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="8dp"
            android:paddingEnd="10dp"
            android:paddingBottom="8dp"
            app:horizontalSpacing="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/map_ll_divider"
            app:layout_constraintVertical_bias="0.101"
            app:verticalsSpacing="8dp">

        </com.mredrock.cyxbs.common.component.RedRockAutoWarpView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>